--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alo this is changes</title>
-</head>
-<body>
-    
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="desktop">
+      <div class="div">
+        <div class="overlap">
+          <img class="screenshot" src="assets/screenshot-2023-12-06-012142-1.png" />
+          <p class="FLOWPAL"><span class="text-wrapper">FLOW</span> <span class="span">PAL</span></p>
+        </div>
+        <div class="ellipse"></div>
+        <div class="text-wrapper-2">Home</div>
+        <div class="text-wrapper-3">About</div>
+        <div class="text-wrapper-4">Services</div>
+        <div class="text-wrapper-5">Blogs</div>
+        <div class="overlap-group">
+          <div class="ellipse-2"></div>
+          <img class="img" src="assets/ellips-4.svg" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
