--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,17 +11,31 @@
     <div class="desktop">
       <div class="div">
         <div class="overlap">
-          <img class="screenshot" src="assets/screenshot-2023-12-06-012142-1.png" />
+          <img class="screenshot" src="img/screenshot-2023-12-06-012142-1.png" />
           <p class="FLOWPAL"><span class="text-wrapper">FLOW</span> <span class="span">PAL</span></p>
         </div>
-        <div class="ellipse"></div>
-        <div class="text-wrapper-2">Home</div>
-        <div class="text-wrapper-3">About</div>
-        <div class="text-wrapper-4">Services</div>
-        <div class="text-wrapper-5">Blogs</div>
         <div class="overlap-group">
+          <div class="text-wrapper-2">Contact Us :</div>
+          <div class="text-wrapper-3">propalorganization@gmail.com</div>
+          <div class="text-wrapper-4">Navigation :</div>
+          <p class="element-flowpal-all"><br />© 2023 FlowPal. All rights reserved</p>
+          <div class="text-wrapper-5">Home</div>
+          <div class="text-wrapper-6">About</div>
+          <div class="text-wrapper-7">Services</div>
+          <div class="text-wrapper-8">Blogs</div>
+        </div>
+        <div class="overlap-2">
+          <div class="ellipse"></div>
+          <img class="cup" src="img/cup2-1.png" />
+          <p class="empowering-your">Empowering Your <br />Menstrual Health <br />Journey</p>
+        </div>
+        <div class="text-wrapper-9">Home</div>
+        <div class="text-wrapper-10">About</div>
+        <div class="text-wrapper-11">Services</div>
+        <div class="text-wrapper-12">Blogs</div>
+        <div class="overlap-3">
           <div class="ellipse-2"></div>
-          <img class="img" src="assets/ellips-4.svg" />
+          <img class="img" src="img/ellipse-4.svg" />
         </div>
       </div>
     </div>
