--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="desktop">
       <div class="div">
         <div class="overlap">
-          <img class="screenshot" src="img/screenshot-2023-12-06-012142-1.png" />
+          <img class="screenshot" src="assets/screenshot-2023-12-06-012142-1.png" />
           <p class="FLOWPAL"><span class="text-wrapper">FLOW</span> <span class="span">PAL</span></p>
         </div>
         <div class="overlap-group">
@@ -26,7 +26,7 @@
         </div>
         <div class="overlap-2">
           <div class="ellipse"></div>
-          <img class="cup" src="img/cup2-1.png" />
+          <img class="cup" src="assets/cup2.png" />
           <p class="empowering-your">Empowering Your <br />Menstrual Health <br />Journey</p>
         </div>
         <div class="text-wrapper-9">Home</div>
@@ -35,7 +35,7 @@
         <div class="text-wrapper-12">Blogs</div>
         <div class="overlap-3">
           <div class="ellipse-2"></div>
-          <img class="img" src="img/ellipse-4.svg" />
+          <img class="img" src="assets/ellips-4.svg" />
         </div>
       </div>
     </div>
