--- a/tracker/tracker.html
+++ b/tracker/tracker.html
@@ -3,19 +3,30 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Cycle Tracker</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>FlowPal</title>
+    <link rel="stylesheet" href="/tracker/style.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png">
   </head>
   <body>
-    <h1>Period tracker</h1>
+    <div class="body">
+    <section id="header">
+    <div class="container">
+        <img src="/assets/logo.png" class="logo">
+            <div class="header-text">
+                <h1>Flow<span class="span">Pal</span></h1>
+            </div>
+        </div>
+    </section>
+    <h1>Period Tracker</h1>
     <h1>Period Calculator</h1>
 
-    <label for="lastPeriodDate">Enter the date of your last period:</label>
+    <label for="lastPeriodDate">Enter The Date of Your Last Period:</label>
     <input type="date" id="lastPeriodDate" />
 
-    <button onclick="calculatePeriod()">Calculate</button>
+    <button onclick="calculatePeriod()">Calculate</button><br>
 
     <p id="Your_Result"></p>
-    <script src="app.js" defer></script>
+    <script src="/tracker/app.js" defer></script>
+    </div>
   </body>
 </html>
