--- a/source-code/index.html
+++ b/source-code/index.html
@@ -259,6 +259,6 @@
         });
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="/source-code/app.js" ></script>
+    <script src="/source-code/index.js" ></script>
 </body>
 </html>
