--- a/source-code/index.html
+++ b/source-code/index.html
@@ -136,11 +136,11 @@
     <section id="contact">
         <div class="container contact-row">
             <div class="contact-left-col">
-                <h1>Please Send Inquiries, <br>If Any</h1>
+                <h1>Send Reminder</h1><br>
                 <form>
                     <input type="text" id="name" name="name" placeholder="Enter Name">
                     <input type="email" id="email" name="email" placeholder="Enter Email">
-                    <input type="text" id="message" name="Message" placeholder="Enter Enquiries">
+                    <!-- <input type="text" id="message" name="Message" placeholder="Enter Enquiries"> -->
                     <div class="btn-box">
                         <button class="common-btn" id="signupButton">Submit</button>
                     </div>
