--- a/web-pages/tracker.html
+++ b/web-pages/tracker.html
@@ -37,10 +37,11 @@
       <input type="date" id="lastPeriodDate" />
 
       <button onclick="calculatePeriod()">Calculate</button><br>
-
+      <button onclick="checkPreviousPeriod()">Check Previous</button><br />
       <p id="Your_Result"></p>
       <script src="/web-pages/app.js" defer></script>
     </div>
+    <div>
     <script>
       function reDirectToHome(){
         window.location.href = '/source-code/index.html';
