--- a/source-code/index.html
+++ b/source-code/index.html
@@ -37,7 +37,7 @@
             <li><a href="#services">SERVICES</a></li>
             <li><a href="#blogs">BLOGS</a></li>
             <!-- <li><a href="#">LOGIN</a></li> -->
-            <li><a href="#contact">CONTACT US</a></li><br>
+            <li><a href="#contact">Notify</a></li><br>
         </ul>
     </nav>
     <section id="header">
