--- a/source-code/index.html
+++ b/source-code/index.html
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="contact-right-col">
-                <img src="/assets/">
+                <img src="/assets/images.png">
             </div>
         </div>
     </section>
